# deta-rust

./: Cargo.toml  LICENSE  README.md
examples/: db_items_management.rs  files_management.rs
src/: constants.rs  deta_client.rs  error.rs  lib.rs
src/database/: mod.rs  models.rs  query.rs  requests.rs  updates.rs
src/database/common/: mod.rs  types.rs
src/drive/: mod.rs  models.rs  requests.rs
src/utils/: mod.rs  parse.rs  request.rs
tests/: database.rs  drive.rs
