[package]
name = "deta_rust"
version = "0.1.8"
authors = ["Jakub Padlo"]
edition = "2021"
description = "The unofficial Deta SDK for Rust lang"
repository = "https://github.com/JakubesP/deta-rust"
homepage = "https://github.com/JakubesP/deta-rust"
license = "MIT"
readme = "README.md"

[dependencies]
reqwest = { version = "0.11.8", features = ["json", "stream"] }
serde = { version = "1.0.94", features = ["derive"]  }
serde_json = "1.0.40"
bytes = "1.1.0"
thiserror = "1.0.30"

[dev-dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
serial_test = "0.5.1"
tokio = { version = "1", features = ["full"] }